--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.27.2",
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.4",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-file-base64": "^1.0.3",
@@ -58,5 +59,4 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.7.1"
     }
-    
 }
